# ai-workflow

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  run-examples.sh
assets/legacy/: build.llama.cpp.readme  builder.py  cli.py
assets/legacy/misc/: dedupe.py  (+4 more)
data/rag_docs_for_assistant_db/: chroma.sqlite3
examples/: combined.json  llama-3.1-8b-output-0.txt  llama-3.1-8b-output-1.txt  llama-3.1-8b-output-10.txt  llama-3.1-8b-output-11.txt  llama-3.1-8b-output-12.txt  llama-3.1-8b-output-13.txt  llama-3.1-8b-output-14.txt  llama-3.1-8b-output-15.txt  llama-3.1-8b-output-16.txt  llama-3.1-8b-output-17.txt  llama-3.1-8b-output-18.txt  llama-3.1-8b-output-19.txt  llama-3.1-8b-output-2.txt  llama-3.1-8b-output-3.txt  llama-3.1-8b-output-4.txt  llama-3.1-8b-output-5.txt  llama-3.1-8b-output-6.txt  llama-3.1-8b-output-7.txt  llama-3.1-8b-output-8.txt  llama-3.1-8b-output-9.txt
examples/rag_docs_for_devices_db/: chroma.sqlite3
finetuning_data/: combine_samples.py  cpn.json  create_concepts_ft_data.py  create_cpns_ft_data.py  create_device_ft_data.py  create_dsls_ft_data.py  model_test.py  openpipe_finetune_color_temp.jsonl  parse_cpn.py  test.json  test.py  tool_calls_dataset.jsonl
finetuning_data/datasets/: test.tx
finetuning_data/system/: charge_disambiguation.jsonl  combined_profile_deduped.jsonl  concept_finetune.jsonl  tool_calls_dataset_sys.jsonl
src/ai_iox_workflow/: builder.py  cli.py  config.py  nucore.py  start_servers.py
src/static_info/: charge.rag  concepts.rag
ui/: package.json
ui/server/: routes.ts
ui/shared/: schema.ts
(+113 files in other folders)
